; ModuleID = '/home/carl/AnghaBench/git/extr_wrapper.c_pread_in_full.c'
source_filename = "/home/carl/AnghaBench/git/extr_wrapper.c_pread_in_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pread_in_full(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i8*, i8** %7, align 8
  store i8* %13, i8** %10, align 8
  store i64 0, i64* %11, align 8
  br label %14

14:                                               ; preds = %31, %4
  %15 = load i64, i64* %8, align 8
  %16 = icmp ugt i64 %15, 0
  br i1 %16, label %17, label %46

17:                                               ; preds = %14
  %18 = load i32, i32* %6, align 4
  %19 = load i8*, i8** %10, align 8
  %20 = load i64, i64* %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @xpread(i32 %18, i8* %19, i64 %20, i32 %21)
  store i64 %22, i64* %12, align 8
  %23 = load i64, i64* %12, align 8
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %17
  store i64 -1, i64* %5, align 8
  br label %48

26:                                               ; preds = %17
  %27 = load i64, i64* %12, align 8
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %26
  %30 = load i64, i64* %11, align 8
  store i64 %30, i64* %5, align 8
  br label %48

31:                                               ; preds = %26
  %32 = load i64, i64* %12, align 8
  %33 = load i64, i64* %8, align 8
  %34 = sub i64 %33, %32
  store i64 %34, i64* %8, align 8
  %35 = load i64, i64* %12, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 %35
  store i8* %37, i8** %10, align 8
  %38 = load i64, i64* %12, align 8
  %39 = load i64, i64* %11, align 8
  %40 = add nsw i64 %39, %38
  store i64 %40, i64* %11, align 8
  %41 = load i64, i64* %12, align 8
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = add nsw i64 %43, %41
  %45 = trunc i64 %44 to i32
  store i32 %45, i32* %9, align 4
  br label %14

46:                                               ; preds = %14
  %47 = load i64, i64* %11, align 8
  store i64 %47, i64* %5, align 8
  br label %48

48:                                               ; preds = %46, %29, %25
  %49 = load i64, i64* %5, align 8
  ret i64 %49
}

declare dso_local i64 @xpread(i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
